# Apim-Samples

./: AGENTS.md  README.md  SECURITY.md  bicepconfig.json  pyproject.toml  start.ps1  start.sh
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: apim-sample-creator.agent.md
.github/skills/sample-creator/: SKILL.md
.github/workflows/: dependency-review.yml  github-pages.yml  label_non_admin_issues.yml  python-tests.yml  scorecard.yml
assets/: APIM-Samples-Slide-Deck.html
docs/: index.html
samples/azure-maps/: map_default_route_v2_aad_get.xml
samples/costing/: README.md  main.bicep  pf-extract-caller-id.xml
samples/dynamic-cors/: README.md  admin-clear-cache.xml  admin-load-cache.xml  cors-api-policy-named-values.xml  cors-api-policy.xml  cors-baseline-native.xml  cors-get.xml  create.ipynb  main.bicep  pf-dynamic-cors-cached-per-api.xml  pf-dynamic-cors-cached.xml  pf-dynamic-cors-hardcoded.xml  pf-dynamic-cors-named-values-per-api.xml  pf-dynamic-cors-named-values.xml  pf-dynamic-cors-outbound.xml
samples/load-balancing/: README.md
setup/: serve_presentation.py  serve_website.py
shared/bicep/modules/apim/v1/: api.bicep  product.bicep
shared/python/: apimrequests.py  azure_resources.py  console.py  utils.py
tests/: Test-Matrix.md
tests/python/: test_serve_presentation.py
